<resources>
    <string name="app_name">Home_gym</string>
    <string name="Sign_Up"> <u>Sign Up</u></string>
    <string name="Skip"> <u>Skip</u></string>
    <string name="Back"> <u>Back</u></string>
    <string name="title_activity_many_body">ManyBody</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_plan">Plan</string>
    <string name="title_lessons">Lessons</string>
    <string name="title_reports">Reports</string>
    <string name="title_profile">Profile</string>
    <string name="home_gym">Home Gym</string>
    <string name="trainig">Trainig</string>
    <string name="spine">Spine</string>
    <string name="hands">Hands</string>
    <string name="zero">0</string>
    <string name="torso">Torso</string>
    <string name="kcal">Kcal</string>
    <string name="push_ups">Push ups</string>
    <string name="minutes">Minutes</string>
    <string name="scores">Scores</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="_00_00">00:00</string>
    <string name="next">next</string>
    <string name="reset">reset</string>
    <string name="ivanov">Ivanov</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="gym">Gym</string>
    <string name="sign_in">Sign In</string>
    <string name="passwordshield">*******</string>
    <string name="button">Button</string>
    <string name="title_activity_test">test</string>
    <string name="nogi">text</string>
    <string name="Legs" />
</resources>
