<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home"
    tools:ignore="InvalidNavigation">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.home_gym.ui.home.HomeFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_lessons"
        android:name="com.example.home_gym.ui.dashboard.DashboardFragment"
        android:label="@string/title_lessons"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.example.home_gym.ui.notifications.NotificationsFragment"
        android:label="@string/title_reports"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.home_gym.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/profile_fragment" />
</navigation>