<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="416dp"
        android:layout_height="312dp"
        android:background="@drawable/gardient"
        android:orientation="horizontal"></LinearLayout>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_gym"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view9"
        android:layout_width="373dp"
        android:layout_height="516dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/view_white"
        android:backgroundTint="@android:color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="#0277BD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trainig"
        android:textColor="#0277BD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kcal"
        android:textColor="#0277BD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="#0277BD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="#0277BD"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textColor="#0277BD"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <ScrollView
        android:layout_width="415dp"
        android:layout_height="632dp"
        android:layout_marginTop="119dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view9"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="131dp"
                android:background="@drawable/muscule1"
                android:gravity="bottom"
                android:paddingStart="17dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/hands"
                android:textAllCaps="false"
                android:textColor="#6E9CD2"
                android:textSize="18sp"
                android:visibility="visible"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="131dp"
                android:background="@drawable/torso"
                android:gravity="bottom"
                android:paddingStart="17dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/torso"
                android:textAllCaps="false"
                android:textColor="#6E9CD2"
                android:textSize="18sp"
                android:visibility="visible"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="131dp"
                android:background="@drawable/spine"
                android:gravity="bottom"
                android:paddingStart="17dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/spine"
                android:textAllCaps="false"
                android:textColor="#6E9CD2"
                android:textSize="18sp"
                android:visibility="visible"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="131dp"
                android:background="@drawable/nogi"
                android:gravity="bottom"
                android:paddingStart="17dp"
                android:paddingEnd="15dp"
                android:paddingBottom="10dp"
                android:text="@string/Legs"
                android:textAllCaps="false"
                android:textColor="#6E9CD2"
                android:textSize="18sp"
                android:visibility="visible"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>