<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B02E70BE"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="179dp"
        android:layout_height="179dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195"
        app:srcCompat="@drawable/fitness"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/edittextbackground"
        android:backgroundTint="@color/white"
        android:hint="@string/ivanov"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="55dp"
        android:paddingEnd="15dp"
        android:textColorHint="#AAAAA9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view20"
        android:layout_width="1dp"
        android:layout_height="48dp"
        android:background="@color/low_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="31dp"
        android:background="@drawable/edittextbackground"
        android:backgroundTint="@color/white"
        android:hint="@string/passwordshield"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="55dp"
        android:paddingEnd="15dp"
        android:textColorHint="#AAAAA9"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664"
        tools:ignore="TextContrastCheck" />

    <View
        android:id="@+id/view21"
        android:layout_width="1dp"
        android:layout_height="47dp"
        android:background="@color/low_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.236"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <Button
        android:id="@+id/SignIn1"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="136dp"
        android:background="@drawable/edittextbackground"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="#6E9CD2"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:layout_marginBottom="88dp"
        android:background="@android:color/transparent"
        android:onClick="SignUp"
        android:text="@string/Sign_Up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginRight="180dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:text="@string/Skip"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gym"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.456"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.355"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/chel"
        app:layout_constraintEnd_toEndOf="@+id/username1"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/username1"
        app:layout_constraintTop_toTopOf="@+id/username1" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/zamok"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toTopOf="@+id/password1" />

</android.support.constraint.ConstraintLayout>